--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1> Olá, esse é o meu código html</h1>
     <button>Botãozão</button>
+    <img src="https://www.shutterstock.com/image-photo/happy-puppy-welsh-corgi-14-600nw-2270841247.jpg">
+    <p style="color: red;">esse elemento cara de pau</p>
 </body>
 </html>
