--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1> Olá, esse é o meu código html</h1>
     <button>Botãozão</button>
     <img height="200cm" width="250cm" src="https://www.shutterstock.com/image-photo/happy-puppy-welsh-corgi-14-600nw-2270841247.jpg">
-    <p style="color: red;">Já sabe o esquema né?</p>
+    <p style="color: rgb(153, 100, 60);">Já sabe o esquema né?</p>
 </body>
 </html>
