--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1> Olá, esse é o meu código html</h1>
     <button>Botãozão</button>
-    <img height="200cm" width="250cm" src="https://www.shutterstock.com/image-photo/happy-puppy-welsh-corgi-14-600nw-2270841247.jpg">
+    <img height="200px" width="250px" src="https://www.shutterstock.com/image-photo/happy-puppy-welsh-corgi-14-600nw-2270841247.jpg">
     <p style="color: rgb(153, 100, 60);">Já sabe o esquema né?</p>
 </body>
 </html>
