--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first page</title>
 </head>
-<body>
+<body style="background-color: greenyellow;">
     <h1> Olá, esse é o meu código html</h1>
     <button>Botãozão</button>
     <br><br>
